--- a/gb/17/8/23/n9558878.md
+++ b/gb/17/8/23/n9558878.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nxaewa3302/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nxaewa3302/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nxaewa3302/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台中学校园人权 61.85分低空飞过</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2017年08月23日讯】（大纪元记者徐翠玲台北报导）台少盟23日公布<ahref="https://github.com/nxaewa3302/djy/blob/master/gb/tag/%E4%B8%AD%E5%AD%A6.md#1">中学</a><ahref="https://github.com/nxaewa3302/djy/blob/master/gb/tag/%E6%A0%A1%E5%9B%AD%E4%BA%BA%E6%9D%83.md#1">校园人权</a>网路调查结果，1,293位国中、高中、高职学生替中学校园人权环境平均打了61.85分，刚好及格、低空飞过。台少盟秘书长叶大华表示，校园儿童人权保障，包括表意权、社会参与权、文化休闲权、禁止体罚／霸凌等酷刑的权利尚有很大进步空间，以及缺乏落实保障相关权益的申诉机制与救济管道。此外，私校校园人权比公立学校平均总分低8.76分，私校校园人权明显受到更多压抑与限制。</p>
-<p>台少盟运用联合国25项<ahref="https://github.com/nxaewa3302/djy/blob/master/gb/tag/%E6%A0%A1%E5%9B%AD%E4%BA%BA%E6%9D%83.md#1">校园人权</a>指标（每题可给予0~4分）进行调查。得到最高分3指标依序为：我校欢迎有各种不同背景和文化的教职员工、学生，包括外国人（3.25分）、我在学校有责任确保人们不歧视他人（3.02分）、发生冲突时，我们会采用非暴力的、合作方式解决冲突（2.98分）。</p>
+<p>【大纪元2017年08月23日讯】（大纪元记者徐翠玲台北报导）台少盟23日公布<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%AD%E5%AD%A6.md#1">中学</a><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%A0%A1%E5%9B%AD%E4%BA%BA%E6%9D%83.md#1">校园人权</a>网路调查结果，1,293位国中、高中、高职学生替中学校园人权环境平均打了61.85分，刚好及格、低空飞过。台少盟秘书长叶大华表示，校园儿童人权保障，包括表意权、社会参与权、文化休闲权、禁止体罚／霸凌等酷刑的权利尚有很大进步空间，以及缺乏落实保障相关权益的申诉机制与救济管道。此外，私校校园人权比公立学校平均总分低8.76分，私校校园人权明显受到更多压抑与限制。</p>
+<p>台少盟运用联合国25项<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%A0%A1%E5%9B%AD%E4%BA%BA%E6%9D%83.md#1">校园人权</a>指标（每题可给予0~4分）进行调查。得到最高分3指标依序为：我校欢迎有各种不同背景和文化的教职员工、学生，包括外国人（3.25分）、我在学校有责任确保人们不歧视他人（3.02分）、发生冲突时，我们会采用非暴力的、合作方式解决冲突（2.98分）。</p>
 <p>平均最低分3指标依序为：学校有专门处理歧视问题的政策和规则，且在歧视事件发生时付诸实施（1.72分）、我校成员可自由印制和散布各种出版物，不必担心受到审查或惩罚（1.87分）、我校教职员工都能得到足够报酬，以维持其本人和家庭健康与适当生活福祉（1.86分）。</p>
 <p>台大法律系学生林彦廷表示，看到调查结果有点意外还有61分，他在高中演讲时，很多学生询问校园人权受损如何处理，例如：女同学课外休闲时穿热裤被教官看到，隔年吉他社就不见了。调查结果中分数很低的两项指标，自由发表意见与刊物、校园权利受损时的争取与救济管道等，各校都有这样的情况。学生办报学校不给经费；校务会议应有学生出席且有投票权，却往往只让学生列席而没有出席。◇</p>
 <p>责任编辑：芸清</p>
@@ -15,41 +15,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/5/8/14/n1018560.md#1">学生组织网路号召八万学生  誓为护发而战</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/6/10/15/n1487931.md#1">台校园人权纪录片竞赛 明天开跑</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/8/5/13/n2116200.md#1">友善校园生命教育谈人权</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/8/5/30/n2136473.md#1">友善校园人权教育签署吁制止迫害</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/9/7/16/n2591418.md#1">推动人权教育 塑造友善校园</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/10/7/11/n2963212.md#1">台湾六和高中零体罚  重视个别差异教育</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/10/7/28/n2979134.md#1">如何让儿童拥有快乐的学习与情境？</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/13/1/10/n3773745.md#1">台国教没经费 全教总：注定失败</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/3/18/n11950032.md#1">繁星录取率逾六成 牙医系报考数不足</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/3/17/n11947247.md#1">因应疫情发展 多大学改采远距教学</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/5/8/14/n1018560.md#1">学生组织网路号召八万学生  誓为护发而战</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/6/10/15/n1487931.md#1">台校园人权纪录片竞赛 明天开跑</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/5/13/n2116200.md#1">友善校园生命教育谈人权</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/5/30/n2136473.md#1">友善校园人权教育签署吁制止迫害</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/7/16/n2591418.md#1">推动人权教育 塑造友善校园</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/7/11/n2963212.md#1">台湾六和高中零体罚  重视个别差异教育</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/7/28/n2979134.md#1">如何让儿童拥有快乐的学习与情境？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/1/10/n3773745.md#1">台国教没经费 全教总：注定失败</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753480.md#1">台教部拟开放2岁混龄3~4岁班 教团反对</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753459.md#1">台北市远距教学2周 家长会：成绩变差</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/8/n10037691.md#1" target="_blank">天下收藏第一人张伯驹的悲喜人生（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/5/n10364709.md#1" target="_blank">修炼法轮功的中共军官们控告江泽民</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/29/n11223087.md#1" target="_blank">【征文】杨宁：中华文物之殇史无前例</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3964268.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/4/7/n12011319.md#1">《蝙蝠侠》男星班迪特 因中共肺炎并发症去世</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/4/8/n12013466.md#1">台染疫男童的9接触者有症状 部分检验结果出炉</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/4/7/n12011929.md#1">【一线采访】趁解封赶紧走 武汉数万人出城</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/4/8/n12012723.md#1">任志强被调查 传需向中南海交代</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/4/6/n12009114.md#1">【最新疫情4.7】美考虑暂停对世卫的捐款</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/4/6/n12009067.md#1">港歌手关淑怡退出演艺圈：见识最丑陋一面</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/4/7/n12012050.md#1">脸书帖文谈中共病毒名称 黄明志反击五毛围攻</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/4/5/n12005827.md#1">美国天后赞台湾防疫 网红讽中共：有钱买不到</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/4/7/n12009463.md#1">苏志燮亲自宣布结婚 还捐款帮助弱势儿童</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/4/6/n12008365.md#1">【疫情透视】中共如何控制好莱坞</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/4/2/n11998489.md#1">庚子流年卦 无妄卦示现2020时局</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/4/6/n12008426.md#1">两个现代人从地府带回来的信息</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/4/7/n12010421.md#1">疫情下行善 美暖男在超市为30名陌生人付账</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/4/8/n12012857.md#1">口罩戴久耳朵痛？ 加拿大男童的护耳器有解</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/3/27/n11979695.md#1">古今记载里的“另外时空”（二）</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/24/n13744127.md#1">从先秦到明清各代粽子 多味多姿一一道来</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752431.md#1">【神韵早期节目】灯舞（2010年制作）</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752381.md#1">【菁英论坛】应付内外困局 中共攻台视政治需求</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752419.md#1">专家：中共核检是干柴烈火 随时引爆疫情</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752937.md#1">林志玲47岁高龄当妈 写给儿子的话令人动容</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752955.md#1">金马影帝万梓良现身小商演 身体欠安需2人搀扶</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752111.md#1">避免旅行时多花冤枉钱 专家教你几招</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752361.md#1">减肥新进展 香港浸大研究发现减少饮食方法</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nxaewa3302/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nxaewa3302/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/23/n9558878.htm">台中学校园人权 61.85分低空飞过</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/23/n9558878.htm">台中学校园人权 61.85分低空飞过</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nxaewa3302/djy/blob/master/gb/17/8/23/n9558878.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nxaewa3302/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nxaewa3302/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nxaewa3302/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/17/8/23/n9558878.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
